; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c__gone_in_dev.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c__gone_in_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__FreeBSD_version = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Obsolete code will removed soon: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"Deprecated code (to be removed in FreeBSD %d): %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_gone_in_dev(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @__FreeBSD_version, align 4
  %9 = call i32 @P_OSREL_MAJOR(i32 %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @gone_panic(i32 %7, i32 %9, i8* %10)
  %12 = load i32, i32* @__FreeBSD_version, align 4
  %13 = call i32 @P_OSREL_MAJOR(i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = icmp sge i32 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load i32, i32* %4, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 (i32, i8*, ...) @device_printf(i32 %17, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8* %18)
  br label %25

20:                                               ; preds = %3
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %5, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 (i32, i8*, ...) @device_printf(i32 %21, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %22, i8* %23)
  br label %25

25:                                               ; preds = %20, %16
  ret void
}

declare dso_local i32 @gone_panic(i32, i32, i8*) #1

declare dso_local i32 @P_OSREL_MAJOR(i32) #1

declare dso_local i32 @device_printf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
